--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 *{
-  font-family: "Roboto", sans-serif;
+  font-family: "poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
